compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__module_private_type_leak_4.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 797
expression: "type PrivateType\n@external(erlang, \"a\", \"b\")\npub fn go(x: PrivateType) -> Int"
---
error: Private type used in public interface
  ┌─ /src/one/two.gleam:3:1
  │
3 │ pub fn go(x: PrivateType) -> Int
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^

The following type is private, but is being used by this public export.

    PrivateType

Private types can only be used within the module that defines them.

